--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock - Paper - Scissors</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .greenText {
+            color: green;
+        }
+        .redText {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Rock - Paper - Scissors</h1>
@@ -17,12 +25,12 @@
 
     <div id="playerDisplay">PLAYER: </div>
     <div id="computerDisplay">COMPUTER: </div>
-    <div id="resultDisplay">IT'S A TIE!</div>
+    <div id="resultDisplay">Match</div>
+    
+    <div id="playerScoreDisplay" class="scoreDisplay">PLAYER SCORE: 0</div>
+    <div id="computerScoreDisplay" class="scoreDisplay">COMPUTER SCORE: 0</div>
 
-    <div id="playerScoreDisplay" class="scoreDisplay greenText">PLAYER SCORE: 0</div>
-    <div id="computerScoreDisplay" class="scoreDisplay redText">COMPUTER SCORE: 0</div>
-
-    <button id="playAgainButton" onclick="resetGame()">Play Again</button>
+    <button id="playAgainButton" onclick="resetGame()" style="display: none;">Play Again</button>
 
     <script src="index.js"></script>
 </body>
