update css styling and game over

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="playerDisplay">PLAYER: </div>
     <div id="computerDisplay">COMPUTER: </div>
-    <div id="resultDisplay">Match</div>
+    <div id="resultDisplay">5 Round</div>
     
     <div id="playerScoreDisplay" class="scoreDisplay">PLAYER SCORE: 0</div>
     <div id="computerScoreDisplay" class="scoreDisplay">COMPUTER SCORE: 0</div>
